@@ -1,5 +1,5 @@
 AC_INIT("christine","0.0.1",markuz@islascruz.org)
-AM_INIT_AUTOMAKE(PROGRAM_NAME,VERSION)
+AM_INIT_AUTOMAKE("christine","0.0.1")
 
 AC_CONFIG_SRCDIR(lib_christine)
 AC_CONFIG_SRCDIR(gui)
@@ -31,7 +31,7 @@ VERSION="0.0.1"
 AC_SUBST(PROGRAM_NAME)
 AC_SUBST(VERSION)
 
-GETTEXT_PACKAGE=PROGRAM_NAME
+GETTEXT_PACKAGE=christine
 AC_SUBST(GETTEXT_PACKAGE)
 ALL_LINGUAS="es_ES"
 AC_SUBST(ALL_LINGUAS)
