@@ -14,6 +14,10 @@
 
 	* Makefile.in.in: Upgrade to gettext-0.15.
 
+2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.15.
+
 2006-12-18  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.15.
